fix oneOf parsing by listing required properties, regen libs, fix examples
